Fixed new messages indicator on small headers

--- a/src/styles/dark/sidebars.styl
+++ b/src/styles/dark/sidebars.styl
@@ -65,12 +65,6 @@ if enable-backdrop and enable-backdrop isnt 'modals' {
   span {
     margin: 0
   }
-
-  if small-headers {
-    &.new-messages-indicator-channel:not(.bottom) {
-      top: 48px!important
-    }
-  }
 }
 
 // Unread indicators
